--- a/source/less/dino.less
+++ b/source/less/dino.less
@@ -2,11 +2,11 @@
   width: 42px;
   height: 45px;
   display: block;
-  border: 1px solid red;
+  //border: 1px solid red;
   background-image: url("img/dino-1.png");
   background-repeat: no-repeat;
   background-position: center center;
-  transition: 0.4s ease transform;
+  transition: 0.4s linear transform;
 }
 
 .dino--step1 {
@@ -19,5 +19,9 @@
 
 .dino--jump {
   background-image: url("img/dino-0.png");
-  transform: translateY(-80px);
+  //transform: translateY(-80px);
 }
+
+.dino--died {
+  background-image: url("img/dino-died.png");
+} 
