теперь двигаются сразу несколько кактусов и облаков

--- a/source/less/cactus.less
+++ b/source/less/cactus.less
@@ -3,10 +3,16 @@
   height: 48px;
   display: block;
   background-image: url("img/cactus-1.png");
+  background-repeat: no-repeat;
+  background-position: center bottom;
   right: -25px;
 }
 
 .cactus--move {
   transform: translateX(-550px);
   transition: 3s linear transform;
+} 
+
+.cactus--2 {
+  background-image: url(img/cactus-2.png);
 }
