отслеживается перепрыгнул ли игрок(только один кактус)

--- a/source/less/cactus.less
+++ b/source/less/cactus.less
@@ -9,9 +9,14 @@
 }
 
 .cactus--move {
-  transform: translateX(-550px);
-  transition: 3s linear transform;
+  transform: translateX(-525px);
+  transition: 2s linear transform;
 } 
+
+.cactus--crash {
+  transform: translateX(-410px);
+  transition: none;
+}
 
 .cactus--2 {
   background-image: url(img/cactus-2.png);
