--- a/source/less/game.less
+++ b/source/less/game.less
@@ -1,7 +1,8 @@
 .game {
   width: 500px;
   height: 200px;
-  border: 1px solid blue;
+  //border: 1px solid blue;
+  overflow: hidden;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
